Armature: Bone dependency tree does not highlight selected bone deep enough #88413

Closed
opened 2021-05-19 22:47:10 +02:00 by tt · 7 comments

System Information
Operating system: Linux-5.4.0-73-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.119.03

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-19 10:17, hash: 81e3d904db
Worked: (newest version of Blender that worked as expected)

Short description of error
In the outliner parented meshes and curves and empties show behind the parent object and can even be selected from there and if of object down the parent relationship tree is selected this is hightlighed in the icons behind the parent object. This is not happening for bones in an armature and their relations the way it should be.

Exact steps for others to reproduce the error
I added a MB Lab Character and selected one of the armbones, these are deep enough down the bone relations tree, then try to navigate down the bone tree in the outliner to see where this bone is...

(1) there is no indication a lot of layers deep
bug01.jpg

(2) only when you are one layer above the selected bone the relation is highlighted
bug02.jpg

(3) There we go, that was harder to find than neccessary.
bug03.jpg

Also the small number next to the one bone symbol shows the number of children bones to that bone but not the children of the children, while for meshes even these relations are added up and shown. Maybe have 2 numbers there, one for overall children and one for the first grade children as bones can only parent bones and more bone icons are redundant.

Also while working with bones and armatures I found using object constraints like the "child of" constraint really useful, when an object like an empty is related to a bone with that constraint that could also show in the outliner with a quick selection of that object, but that is probably more of a feature request but I thought I just mention the idea here as it is very related (another child process lol)

**System Information** Operating system: Linux-5.4.0-73-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.119.03 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-19 10:17, hash: `81e3d904db` Worked: (newest version of Blender that worked as expected) **Short description of error** In the outliner parented meshes and curves and empties show behind the parent object and can even be selected from there and if of object down the parent relationship tree is selected this is hightlighed in the icons behind the parent object. This is not happening for bones in an armature and their relations the way it should be. **Exact steps for others to reproduce the error** I added a MB Lab Character and selected one of the armbones, these are deep enough down the bone relations tree, then try to navigate down the bone tree in the outliner to see where this bone is... (1) there is no indication a lot of layers deep ![bug01.jpg](https://archive.blender.org/developer/F10127943/bug01.jpg) (2) only when you are one layer above the selected bone the relation is highlighted ![bug02.jpg](https://archive.blender.org/developer/F10127949/bug02.jpg) (3) There we go, that was harder to find than neccessary. ![bug03.jpg](https://archive.blender.org/developer/F10127951/bug03.jpg) Also the small number next to the one bone symbol shows the number of children bones to that bone but not the children of the children, while for meshes even these relations are added up and shown. Maybe have 2 numbers there, one for overall children and one for the first grade children as bones can only parent bones and more bone icons are redundant. Also while working with bones and armatures I found using object constraints like the "child of" constraint really useful, when an object like an empty is related to a bone with that constraint that could also show in the outliner with a quick selection of that object, but that is probably more of a feature request but I thought I just mention the idea here as it is very related (another child process lol)
Author

Added subscriber: @ToxicTuba

Added subscriber: @ToxicTuba
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I can confirm the difference in behavior of armature/bone hierarchies vs. object hierarchies (and without digging deeper I would not see a reason to not use the object behavior here, but will check code).

Tip: to quickly navigate to the selected bone, use {key .}
image.png

I can confirm the difference in behavior of armature/bone hierarchies vs. object hierarchies (and without digging deeper I would not see a reason to not use the object behavior here, but will check code). Tip: to quickly navigate to the selected bone, use {key .} ![image.png](https://archive.blender.org/developer/F10143167/image.png)

This issue was referenced by b6a35a8153

This issue was referenced by b6a35a8153c30f5c1516fef6fb5c16482248cdf0
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

I have made a Diff for this, will let the module(s) decide on how to proceed.

I have made a Diff for this, will let the module(s) decide on how to proceed.
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Philipp Oeser self-assigned this 2021-07-08 10:50:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88413
No description provided.